src/test/resources/30/single/xhtml/invalid/epubtype-deprecated.xhtml
<!DOCTYPE html>	 
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" lang="en">
  <head>
    <title>Test</title>
  </head>
  <!-- WARNINGs for these properties, deprecated in the EPUB SSV -->
  <body>
    <h1>Test</h1>
    <a href="#annotation" epub:type="annoref">ref</a>
    <aside id="annotation" epub:type="annotation">annotation</aside>
    <aside epub:type="help">help</aside>
    <aside epub:type="marginalia">marginalia</aside>
    <aside epub:type="note">note</aside>
    <aside epub:type="rearnote">rearnote</aside>
    <aside epub:type="rearnotes">rearnotes</aside>
    <aside epub:type="sidebar">sidebar</aside>
    <section epub:type="subchapter">
      <h2>subchapter</h2>
    </section>
    <div epub:type="warning">warning</div>
  </body>
</html>
